--- a/resume.template
+++ b/resume.template
@@ -101,7 +101,11 @@
                       {{/if}}
                       {{#if startDate}}
                         {{#if endDate}}
-                          <p>{{startDate}} to {{endDate}}</p>
+                          {{#ifCond startDate '!=' endDate}}
+                            <p>{{startDate}} to {{endDate}}</p>
+                          {{else}}
+                            <p>{{startDate}}</p>
+                          {{/ifCond}}
                         {{else}}
                           <p>{{startDate}} to present</p>
                         {{/if}}
@@ -114,7 +118,7 @@
                           {{#if position}}
                             <strong>{{position}}</strong> at
                           {{/if}}
-                          <strong><a href="{{website}}">{{company}}:</a></strong>
+                          <strong><a href="{{website}}" target="_blank">{{company}}:</a></strong>
                         {{else}}
                           {{#if company.length}}
                             {{#if position}}
@@ -129,6 +133,54 @@
                       {{/ifCond}}
                       {{#if summary}}
                         <p>{{summary}}</p>
+                      {{/if}}
+                      {{#if highlights.length}}
+                        {{#each highlights}}
+                          <p class="highlight">{{{.}}}</p>
+                        {{/each}}
+                      {{/if}}
+                    </div>
+                  </div>
+                </section>
+            {{/foreach}}
+          {{/if}}
+
+          {{#if resume.projects.length}}
+            {{#foreach resume.projects}}
+              {{#if $first}}
+                <section class="content">
+              {{else}}
+                <section class="content work-content">
+              {{/if}}
+                  <div class="row">
+                    <div class="content-cat big-text">
+                      {{#if $first}}
+                        Projects
+                      {{/if}}
+                      {{#if startDate}}
+                        {{#if endDate}}
+                          {{#ifCond startDate '!=' endDate}}
+                            <p>{{startDate}} to {{endDate}}</p>
+                          {{else}}
+                            <p>{{startDate}}</p>
+                          {{/ifCond}}
+                        {{else}}
+                          <p>{{startDate}} to present</p>
+                        {{/if}}
+                      {{/if}}
+                    </div>
+                    <div class="content-text work-listing education-listing">
+                      {{#if name}}
+                        <p>
+                        {{#ifCond url '&&' name}}
+                          <strong><a href="{{url}}" target="_blank">{{name}}:</a></strong>
+                        {{else}}
+                          <strong>{{name}}:</strong>
+                        {{/ifCond}}
+                        </p>
+                      {{/if}}
+                      {{#if description}}
+                        <p>{{description}}</p>
                       {{/if}}
                       {{#if highlights.length}}
                         {{#each highlights}}
